--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  release:
+  tag_and_release:
    runs-on: ubuntu-18.04
    steps:
     # Get the code into our container
@@ -21,9 +21,15 @@ jobs:
     # Build package
     - name: Build package
       run: "scripts/build"
+    # Make tag
+    - name: Make git tag
+      run: "scripts/tag"
+     # Create Github release
+    - name: Create release
+      run: "scripts/release"
     # Publish with twine
     - name: Publish with twine
-      run: "scripts/publish"
+      run: "scripts/test_publish"
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
