Login with token for gh

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -27,6 +27,8 @@ jobs:
      # Create Github release
     - name: Create release
       run: "scripts/release"
+      env:
+          GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
     # Publish with twine
     - name: Publish with twine
       run: "scripts/test_publish"
